# Music-Assistant

./: .gitignore  README.md  example.yml  main.py  pyproject.toml  requirements.txt  upload.py
config/: __init__.py  config.yml
config/trackers/: LT.yml
src/: filechecks.py  imageprocessing.py  mediaparser.py  torrentcreate.py  torrentname.py
utils/: collections.py
