[project]
name = "Music-Assistant"
version = "0.1.0"
description = "Upload Assistant to Upload Music to UNIT3D Trackers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beaupy~=3.10.1",
    "beautifulsoup4~=4.13.3",
    "cli-ui==0.19.0",
    "httpx~=0.28.1",
    "pillow~=12.2.0",
    "pymediainfo~=7.0.1",
    "pyyaml~=6.0.2",
    "requests==2.32.4",
    "rich~=13.9.4",
    "tabulate==0.9.0",
    "torf~=4.3.0",
]
